Overflow on route change issue fix

--- a/src/components/portfolio/portfolio.module.scss
+++ b/src/components/portfolio/portfolio.module.scss
@@ -59,6 +59,7 @@
 			margin: 0 10px;
 			@include for-tablet-up {
 				margin: 0;
+				text-align: start;
 			}
 			h1 {
 				display: none;
